--- a/src/components/StandaloneFooter.astro
+++ b/src/components/StandaloneFooter.astro
@@ -3,8 +3,7 @@ import ThemeProvider from 'virtual:starlight/components/ThemeProvider';
 import ThemeSelect from 'virtual:starlight/components/ThemeSelect';
 ---
 
-<footer
-  class="bg-white dark:bg-slate-900 border-t border-gray-200 dark:border-gray-800">
+<footer class="dark:bg-gray-900 border-t border-gray-200 dark:border-gray-800">
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-12">
     <div
       class="mt-8 pt-8 border-t border-gray-200 dark:border-gray-800 text-center text-sm text-gray-600 dark:text-gray-400">
