--- a/src/pages/get-started.astro
+++ b/src/pages/get-started.astro
@@ -1,6 +1,17 @@
 ---
 import StandaloneLayout from '../layouts/StandaloneLayout.astro';
 import MultiStepForm from '../components/signup/MultiStepForm.astro';
+import {
+  signupSteps,
+  installationOptions,
+  deploymentTypes,
+  roleOptions,
+  expertiseOptions,
+  companySizeOptions,
+  discoveryOptions,
+  timelineOptions,
+  featureHighlights,
+} from '~/data/signupFormData.ts';
 
 const pageTitle = 'Get Started with Distr - Sign Up for Free';
 const pageDescription =
@@ -8,5 +19,22 @@ const pageDescription =
 ---
 
 <StandaloneLayout title={pageTitle} description={pageDescription}>
-  <MultiStepForm flowType="signup" />
+  <MultiStepForm
+    heading="The easiest way to distribute software"
+    subheading="You will gain automatic access to our platform upon completing the form."
+    ctaNote="(No credit card required.)"
+    requirePassword={true}
+    signupSteps={signupSteps}
+    installationOptions={installationOptions}
+    deploymentTypes={deploymentTypes}
+    roleOptions={roleOptions}
+    expertiseOptions={expertiseOptions}
+    companySizeOptions={companySizeOptions}
+    discoveryOptions={discoveryOptions}
+    timelineOptions={timelineOptions}
+    featureHighlights={featureHighlights}
+    successTitle="Thank you!"
+    successMessage="Please check your mailbox to confirm your email and log into Distr."
+    submitButtonText="Complete Sign Up"
+  />
 </StandaloneLayout>
