chore: add calcom integration
Signed-off-by: Philip <pmig@glasskube.com>

--- a/src/layouts/StandaloneLayout.astro
+++ b/src/layouts/StandaloneLayout.astro
@@ -41,21 +41,21 @@ const ogUrl = Astro.url.href;
 
       <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
       <link rel="sitemap" href="/sitemap-index.xml" />
-      <!-- Google tag (gtag.js) -->
-      <script
-        async
-        src="https://www.googletagmanager.com/gtag/js?id=G-PH8R3YE606"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {
-          dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
+      <!--&lt;!&ndash; Google tag (gtag.js) &ndash;&gt;-->
+      <!--<script-->
+      <!--  async-->
+      <!--  src="https://www.googletagmanager.com/gtag/js?id=G-PH8R3YE606"></script>-->
+      <!--<script>-->
+      <!--  window.dataLayer = window.dataLayer || [];-->
+      <!--  function gtag() {-->
+      <!--    dataLayer.push(arguments);-->
+      <!--  }-->
+      <!--  gtag('js', new Date());-->
 
-        gtag('config', 'G-PH8R3YE606');
-      </script>
-      <!-- HubSpot -->
-      <script src="https://js-eu1.hs-scripts.com/144345473.js" async></script>
+      <!--  gtag('config', 'G-PH8R3YE606');-->
+      <!--</script>-->
+      <!--&lt;!&ndash; HubSpot &ndash;&gt;-->
+      <!--<script src="https://js-eu1.hs-scripts.com/144345473.js" async></script>-->
     </head>
     <body class="bg-gray-50 dark:bg-gray-900 min-h-screen"> </body>
     <StandaloneFooter />
