--- a/src/pages/onboarding.astro
+++ b/src/pages/onboarding.astro
@@ -20,6 +20,7 @@ const pageDescription =
 
 <StandaloneLayout title={pageTitle} description={pageDescription}>
   <MultiStepForm
+    flowType="onboarding"
     heading="The easiest way to distribute software"
     subheading="You will get a free 30 day trial access to our platform."
     ctaNote="(No credit card required.)"
@@ -35,6 +36,6 @@ const pageDescription =
     featureHighlights={featureHighlights}
     successTitle="Book a meeting"
     successMessage="Thank you for your interest! Our team will reach out to you shortly to schedule an onboarding session."
-    submitButtonText="Complete Sign Up"
+    submitButtonText="Schedule onboarding"
   />
 </StandaloneLayout>
