--- a/src/components/signup/MultiStepForm.astro
+++ b/src/components/signup/MultiStepForm.astro
@@ -61,11 +61,7 @@ const {
       <!-- Left Column: Features -->
       <div class="lg:col-span-1">
         <div class="flex flex-col items-start mb-8">
-          <img
-            src={distrBrandLogo.src}
-            alt="Distr"
-            class="h-12 w-auto"
-          />
+          <img src={distrBrandLogo.src} alt="Distr" class="h-12 w-auto" />
         </div>
         <ul class="list-none space-y-5">
           {
