--- a/src/pages/get-started.astro
+++ b/src/pages/get-started.astro
@@ -39,5 +39,5 @@ const pageDescription =
     successMessage="Please check your mailbox to confirm your email and log into Distr."
     submitButtonText="Complete Sign Up"
   />
-  <CalBooking></CalBooking>
+  <CalBooking />
 </StandaloneLayout>
