chore: implement booking integration for onboarding
Signed-off-by: Philip <pmig@glasskube.com>

--- a/src/pages/get-started.astro
+++ b/src/pages/get-started.astro
@@ -12,7 +12,7 @@ import {
   timelineOptions,
   featureHighlights,
 } from '~/data/signupFormData.ts';
-import CalBooking from '~/components/booking/CalBooking.tsx';
+import CalBooking from '~/components/booking/CalComIFrame.astro';
 
 const pageTitle = 'Get Started with Distr - Sign Up for Free';
 const pageDescription =
