--- a/src/layouts/StandaloneLayout.astro
+++ b/src/layouts/StandaloneLayout.astro
@@ -39,26 +39,16 @@ const ogUrl = Astro.url.href;
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="sitemap" href="/sitemap-index.xml" />
-    <!--&lt;!&ndash; Google Tag Manager &ndash;&gt;-->
-    <!--<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':-->
-    <!--    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],-->
-    <!--  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=-->
-    <!--  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);-->
-    <!--})(window,document,'script','dataLayer','GTM-T58STPCJ');</script>-->
-    <!--&lt;!&ndash; End Google Tag Manager &ndash;&gt;-->
-    <!--&lt;!&ndash; HubSpot &ndash;&gt;-->
-    <!--<script src="https://js-eu1.hs-scripts.com/144345473.js" async></script>-->
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-T58STPCJ');</script>
+    <!-- HubSpot -->
+    <script src="https://js-eu1.hs-scripts.com/144345473.js" async></script>
   </head>
   <body class="bg-gray-50 dark:bg-gray-900 min-h-screen">
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-T58STPCJ"
-        height="0"
-        width="0"
-        style="display:none;visibility:hidden"></iframe></noscript
-    >
-    <!-- End Google Tag Manager (noscript) -->
     <main>
       <slot />
     </main>
