--- a/src/pages/get-started.astro
+++ b/src/pages/get-started.astro
@@ -15,7 +15,7 @@ const pageDescription =
     ctaNote="(No credit card required.)"
     requirePassword={true}
     successTitle="Thank you!"
-    successMessage="Please check your mailbox to confirm your email and log into Distr. You can also directly schedule a personal onboarding if a Distr team member."
+    successMessage="Please check your mailbox to confirm your email and log into Distr. You can also directly schedule a personal onboarding with a Distr team member."
     submitButtonText="Complete Sign Up"
   />
 </StandaloneLayout>
