--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -64,7 +64,7 @@ const DESCRIPTION =
                 </a>
               </div>
             </div>
-          </div>
+          </divś>
         </div>
 
         <!-- Book a Demo -->
