chore: fix invalid div tag
Signed-off-by: Philip <pmig@glasskube.com>

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -39,7 +39,7 @@ const DESCRIPTION =
               </p>
             </div>
           </div>
-          <divś>
+          <div>
             <div class="grid md:grid-cols-2 gap-6 text-center">
               <div>
                 <p class="font-bold mb-1">Glasskube, Inc.</p>
@@ -64,7 +64,7 @@ const DESCRIPTION =
                 </a>
               </div>
             </div>
-          </divś>
+          </div>
         </div>
 
         <!-- Book a Demo -->
