--- a/src/components/booking/CalComIFrame.astro
+++ b/src/components/booking/CalComIFrame.astro
@@ -2,7 +2,10 @@
 
 ---
 
-<div style="width:100%;height:100%;overflow:scroll" id="my-cal-inline-demo" aria-label="Schedule a demo">
+<div
+  style="width:100%;height:100%;overflow:scroll"
+  id="my-cal-inline-demo"
+  aria-label="Schedule a demo">
 </div>
 <script type="text/javascript">
   (function (C, A, L) {
